return empty peers alawys
Change-Id: I685cf2faeafffe7fe24c3b0a8f6b442738f3cc6d